--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Method-Delegation
 
+0.03    June 4, 2019
+        Added "maybe_to" as a cleaner replacement for "if_true => 1".
+
 0.02    June 4, 2019
         Add 'if_true => 1' shortcut for the common case (suggestion by ilmari)
 
